crates/link-parser/tests/snapshots/parse_items__empty_module.snap
---
source: crates/link-parser/tests/parse_items.rs
expression: "parse_report(vec![])"
---
Module @0..0
--- diagnostics ---
(none)
