crates/link-parser/tests/snapshots/parse_items__enum_with_unit_variant.snap
---
source: crates/link-parser/tests/parse_items.rs
expression: "parse_report(vec![Enum, id(\"Option\"), LBracket, id(\"T\"), RBracket, Colon,\nNewline, Indent, id(\"Some\"), LParen, id(\"T\"), RParen, Newline, id(\"None\"),\nNewline, Dedent,])"
---
Module @0..25
  Enum `Option` @0..25
    generics
      TypeParam `T` @11..12
    variants
      Variant `Some` @14..21
        payload
          Path `T` @19..20
      Variant `None` @21..25
--- diagnostics ---
(none)
