crates/link-parser/tests/snapshots/parse_items__error_missing_colon_before_body.snap
---
source: crates/link-parser/tests/parse_items.rs
expression: "parse_report(vec![Fn, id(\"f\"), LParen, RParen, Newline, Indent, id(\"x\"),\nNewline, Dedent,])"
---
Module @0..6
  Fn `f` @0..6
--- diagnostics ---
LK0103 @5..5 expected `:` before the function body
