crates/link-parser/tests/snapshots/parse_items__error_missing_function_name.snap
---
source: crates/link-parser/tests/parse_items.rs
expression: "parse_report(vec![Fn, LParen, RParen, Colon, id(\"x\"), Newline, Struct,\nid(\"Doc\"), Colon, Newline, Indent, id(\"title\"), Colon, id(\"String\"), Newline,\nDedent,])"
---
Module @0..28
  Struct `Doc` @6..28
    fields
      Field `title` @16..28
        type: Path `String` @22..28
--- diagnostics ---
LK0102 @2..3 expected an identifier, found `(`
