crates/link-parser/tests/snapshots/parse_items__error_no_indent_after_colon.snap
---
source: crates/link-parser/tests/parse_items.rs
expression: "parse_report(vec![Fn, id(\"f\"), LParen, RParen, Colon, Newline, Fn, id(\"g\"),\nLParen, RParen, Colon, id(\"x\"), Newline,])"
---
Module @0..13
  Fn `f` @0..6
    body: Block @6..6
  Fn `g` @6..13
    body: Block @12..13
--- diagnostics ---
LK0100 @6..8 expected an indented block after `:`, found `fn`
