crates/link-parser/tests/snapshots/parse_items__error_statement_at_top_level.snap
---
source: crates/link-parser/tests/parse_items.rs
expression: "parse_report(vec![Let, id(\"x\"), Eq, int(1), Newline, Struct, id(\"Doc\"), Colon,\nNewline, Indent, id(\"title\"), Colon, id(\"String\"), Newline, Dedent,])"
---
Module @0..28
  Struct `Doc` @6..28
    fields
      Field `title` @16..28
        type: Path `String` @22..28
--- diagnostics ---
LK0101 @0..3 expected a declaration (`fn`, `struct`, `enum`, `trait`, `impl` or `use`), found `let`
