crates/link-parser/tests/snapshots/parse_items__fn_self_receivers.snap
---
source: crates/link-parser/tests/parse_items.rs
expression: "parse_report(vec![Fn, id(\"a\"), LParen, SelfValue, RParen, Colon, id(\"x\"),\nNewline, Fn, id(\"b\"), LParen, Amp, SelfValue, RParen, Colon, id(\"x\"), Newline,\nFn, id(\"c\"), LParen, Amp, Mut, SelfValue, Comma, id(\"n\"), Colon, id(\"I32\"),\nRParen, Colon, id(\"x\"), Newline,])"
---
Module @0..44
  Fn `a` @0..11
    receiver: self @4..8
    body: Block @10..11
  Fn `b` @11..23
    receiver: &self @15..20
    body: Block @22..23
  Fn `c` @23..44
    receiver: &mut self @27..35
    params
      Param `n` @36..41
        type: Path `I32` @38..41
    body: Block @43..44
--- diagnostics ---
(none)
